[tool.poetry]
name = "money"
version = "0.1.0"
description = ""
authors = ["Robert Diao <43899833+rldiao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
